--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "ng deploy --repo=https://github.com/block-core/ariton-help.git --name=SondreB",
+    "deploy": "ng deploy --repo=https://github.com/block-core/ariton-help.git --name=SondreB --email=sondre@outlook.com",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
